--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ dependencies:
 
   firebase_auth: ^0.8.4+4
   cloud_firestore: ^0.9.13+1
-
+  modal_progress_hud: ^0.1.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -40,6 +40,7 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
+
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
