--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
+  flutter_staggered_animations: "^0.1.2"
+
   carousel_pro: ^1.0.0
 
   flutter:
