--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  flutter_webview_plugin: ^0.2.1+2
+  paytm: ^1.0.0
   firebase_core: ^0.3.4
 
   firebase_auth: ^0.8.4+4
